<resources>
    <string name="app_name">CV Builder</string>
    <string name="personal_info">Personal Info</string>
    <string name="education">Education</string>
    <string name="Skills">Skills</string>
    <string name="university">University</string>
    <string name="spinner_hint">Degree</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="save">Save</string>
    <string name="empty_message">Please, Fill Empty Fields</string>
    <string name="saved_msg">Object Saved</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="new_skill">New Skill</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">ُEmail</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="address">Address</string>
    <string-array name="spinner_degree">
        <item>Bachelor\'s degree</item>
        <item>Master\'s degree</item>
    </string-array>
</resources>
