<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/btn_personal_info"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight_dp_margin"
        android:onClick="goPersonalInfoActivity"
        android:text="@string/personal_info"
        app:layout_constraintBottom_toTopOf="@+id/btn_education"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_education"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight_dp_margin"
        android:onClick="goEducationActivity"
        android:text="@string/education"
        app:layout_constraintBottom_toTopOf="@+id/btn_skills"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_personal_info" />

    <Button
        android:id="@+id/btn_skills"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight_dp_margin"
        android:onClick="goSkillsActivity"
        android:text="@string/Skills"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_education" />
</android.support.constraint.ConstraintLayout>